Add loading feature to the clock

--- a/index.html
+++ b/index.html
@@ -48,11 +48,14 @@
         >Nairobi</span
       >
     </div>
-    <p
-      class="indicator font-inter font-semibold text-white text-3xl w-[53rem] justify-self-start"
+    <div
+      class="flex gap-5 w-[53rem] font-inter font-semibold text-white text-3xl"
     >
-      Europe - London
-    </p>
+      <p class="indicator">Europe - London</p>
+      <p class="loading unactive transition-all duration-300 text-black">
+        Loading ...
+      </p>
+    </div>
 
     <div
       class="w-[53rem] h-72 relative overflow-hidden rounded-md shadow-custom-card"
